@@ -1,3 +1,9 @@
+2008-02-28  Joshua Sumali  <jsumali@redhat.com>
+
+	* Makefile.am:
+	(icedtea-debug): Fixed typo.
+	* Makefile.in: Regenerated.
+
 2008-02-27  Joshua Sumali  <jsumali@redhat.com>
 	    Francis Kung  <fkung@redhat.com>
 
